Dragging the NLA strip cause a crash, if the related action is in tweakmode #93707

Closed
opened 2021-12-05 16:46:57 +01:00 by Nikolaj Woroschilow · 17 comments

System Information
Operating system:
Edition Windows 10 Pro for Workstations
Version 21H2
Systembuild 19044.1387
Graphics card: NVIDIA Quadro P5000

Blender Version
Broken: 3.0.0-stable+v30.f1cca3055776-windows.amd64-release
Worked: 2.93.7

Seems to be caused by 46d56bd956.

Short description of error
Dragging the NLA strip cause a crash, if the related action, from within the NLA strip, is on top.
Not related actions are fine.

Exact steps for others to reproduce the error
Download: NLA-crashes-when-moving-strip.blend

  1. Start up file
  2. Make sure you are in the "Animation" Workspace
  3. Navigate your mouse to the (green) NLA strip
  4. Grab the strip, drag to the any direction.

Screenshot 2021-12-05 153531.jpg

This also happens from the default startup file:

  • create two keyframes for the default cube
  • go to NLA
  • push action down
  • enter tweakmode
  • {key G} for translation
  • move mouse
  • crash
**System Information** Operating system: Edition Windows 10 Pro for Workstations Version 21H2 Systembuild 19044.1387 Graphics card: NVIDIA Quadro P5000 **Blender Version** Broken: 3.0.0-stable+v30.f1cca3055776-windows.amd64-release Worked: 2.93.7 Seems to be caused by 46d56bd956. **Short description of error** Dragging the NLA strip cause a crash, if the related action, from within the NLA strip, is on top. Not related actions are fine. **Exact steps for others to reproduce the error** Download: [NLA-crashes-when-moving-strip.blend](https://archive.blender.org/developer/F12691958/NLA-crashes-when-moving-strip.blend) 1. Start up file 2. Make sure you are in the "Animation" Workspace 3. Navigate your mouse to the (green) NLA strip 4. Grab the strip, drag to the any direction. ![Screenshot 2021-12-05 153531.jpg](https://archive.blender.org/developer/F12691974/Screenshot_2021-12-05_153531.jpg) This also happens from the default startup file: - create two keyframes for the default cube - go to NLA - push action down - enter tweakmode - {key G} for translation - move mouse - crash

Added subscriber: @NIWO-3

Added subscriber: @NIWO-3
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Hi, this has been reported before: #90469 (Blend file with NLA tracks crashes Blender upon opening in 2.93.2, but not 2.92.)

Will merge your report in #90469. Thanks for reporting :)

Hi, this has been reported before: #90469 (Blend file with NLA tracks crashes Blender upon opening in 2.93.2, but not 2.92.) Will merge your report in `#90469`. Thanks for reporting :)
Member

Closed as duplicate of #90469

Closed as duplicate of #90469
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Duplicate' to: 'Needs Triage'

Changed status from 'Duplicate' to: 'Needs Triage'
Member

Dont think this is a duplicate of #90469, will reopen and check...

Dont think this is a duplicate of #90469, will reopen and check...
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

Seems to be caused by 46d56bd956.

@dr.sybren: mind checking?

Seems to be caused by 46d56bd956. @dr.sybren: mind checking?
Philipp Oeser changed title from Dragging the NLA strip cause a crash, if the related action, from within the NLA strip, is on top. to Dragging the NLA strip cause a crash, if the related action is in tweakmode 2021-12-06 13:47:22 +01:00
Sybren A. Stüvel self-assigned this 2021-12-06 14:49:21 +01:00

This issue was referenced by fd4c343dcd

This issue was referenced by fd4c343dcdce8e7b37aee6e314b642b0aecb2e21

This issue was referenced by b9c6ef4e8f

This issue was referenced by b9c6ef4e8fcfbfa1015b284ab0d616b15bd91040

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Still crashes in 3.6 when moving a sound strip also crashes when importing a sound strip.

Still crashes in 3.6 when moving a sound strip also crashes when importing a sound strip.
Member

@atdynax hi, this should be fixed already in 4.0, see: #109787 (fix will be also included in 3.6.2)
Can you confirm in 4.0?: https://builder.blender.org/download/daily/
If crash persists, please feel free to open a new report :)

@atdynax hi, this should be fixed already in 4.0, see: #109787 (fix will be also included in 3.6.2) Can you confirm in 4.0?: https://builder.blender.org/download/daily/ If crash persists, please feel free to open a new report :)

I tried it in 4.0 and it crashed like before. Moving NLA track and trying to add one crashed it the same way as in 3.6.1.

I tried it in 4.0 and it crashed like before. Moving NLA track and trying to add one crashed it the same way as in 3.6.1.

@atdynax please open a new bug report about this. That'll make it easier for us to reproduce & fix.

@atdynax please open a new bug report about this. That'll make it easier for us to reproduce & fix.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93707
No description provided.