Fix T93707: Dragging the tweaked NLA strip causes crash

Earlier code assumed that the active strip was on the active track. This
commit detects when this assumption doesn't hold, and adds a more thorough
search of the active strip.